--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "html5-qrcode": "^2.3.7",
     "i": "^0.3.7",
     "npm": "^9.5.1",
     "prop-types": "^15.8.1",
